# dt-geo-wp6-docs

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
Tsunami-HySEA/container/: index.html
Tsunami-HySEA/leonardo/: index.html
Tsunami-HySEA/troubleshooting/: index.html
WP6-github/upload_packages/: index.html
docs/: .pages  index.md
docs/Tsunami-HySEA/: .pages  container.md  docker.md  leonardo.md  troubleshooting.md
docs/WP6-github/: .pages  upload_packages.md
docs/episode/: .pages  purpose.md  set-up.md
docs/episode/lectures/: .pages  annotations-examples.md  code-examples.md  hands-on.md  icons.md  image-examples.md
docs/spack/: local.md  requirements.txt
docs/spack-and-compss/: .pages  cheat-sheet.md  galileo.md  leonardo.md  local.md  mercalli.md  troubleshooting.md
docs/spack-for-ptf/: .pages  local.md  requirements.txt  requirements_versions.txt
docs/stylesheets/: extra.css
episode/lectures/annotations-examples/: index.html
episode/lectures/code-examples/: index.html
episode/lectures/hands-on/: index.html
episode/purpose/: index.html
episode/set-up/: index.html
overrides/: main.html
search/: search_index.json
spack-and-compss/cheat-sheet/: index.html
spack-and-compss/galileo/: index.html
spack-and-compss/leonardo/: index.html
spack-and-compss/local/: index.html
spack-and-compss/mercalli/: index.html
spack-and-compss/troubleshooting/: index.html
spack-for-ptf/: requirements_versions.txt
spack-for-ptf/local/: index.html
stylesheets/: extra.css
(+2 files in other folders)
